--- a/configs/ipd.yaml
+++ b/configs/ipd.yaml
@@ -1,15 +1,16 @@
 batch_size: 10
 input_dim: 5
 frontier_size: 1
-max_tree_depth: 4
+max_tree_depth: 8
 num_iterations: 100000
 gamma: 0.96
 rollout_length: 16
 lam: 0.97
 vf_coef: 0.1
 learning_rate: 1e-5
-tree_lr: 1e-3
+tree_lr: 1e-5
 num_br_updates: 1
+eval_every: 100
 
 mlp:
   # for the first MLP
