--- a/configs/ipd.yaml
+++ b/configs/ipd.yaml
@@ -1,3 +1,4 @@
+seed: 42
 batch_size: 10
 input_dim: 5
 frontier_size: 1
@@ -9,7 +10,7 @@ lam: 0.97
 vf_coef: 0.1
 learning_rate: 3e-5
 tree_lr: 3e-5
-num_br_updates: 1
+num_br_updates: 3
 eval_every: 100
 do_self_play: False
 br_entropy_beta: 0.007
